change index.html: layout header,sections, footer; add style.css: style header

--- a/Week1/Webpage Project/index.html
+++ b/Week1/Webpage Project/index.html
@@ -3,5 +3,22 @@
     <head>
         <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <img id="logo" src="assets/spiced.png" alt="logo SPICED" />
+            <img
+                id="hamburgerIcon"
+                src="assets/hamburgermenu.svg"
+                alt="menu icon"
+            />
+        </header>
+        <section id="splash">
+            <div>
+                <h3>Welcome to SPICED and the Future.</h3>
+                <button id="getStartedButton" type="button">Get Started</button>
+            </div>
+        </section>
+        <section></section>
+        <footer></footer>
+    </body>
 </html>
