--- a/Week1/Webpage Project/index.html
+++ b/Week1/Webpage Project/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Webpage Project #1</title>
         <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -18,7 +19,7 @@
                 <button id="getStartedButton" type="button">Get Started</button>
             </div>
         </section>
-        <section></section>
+        <section id="promises"></section>
         <footer></footer>
     </body>
 </html>
