Webpage: add 3rd section & footer

--- a/Week1/Webpage Project/index.html
+++ b/Week1/Webpage Project/index.html
@@ -14,12 +14,35 @@
             />
         </header>
         <section id="splash">
-            <div>
-                <h3>Welcome to SPICED and the Future.</h3>
+                <h1>Welcome to SPICED and the Future.</h3>
                 <button id="getStartedButton" type="button">Get Started</button>
-            </div>
         </section>
-        <section id="promises"></section>
-        <footer></footer>
+        <section id="promises">
+
+                <div>
+                    <img class="icon" src="assets/cat.svg" alt="cat icon">
+                    <h2>Best-in-class Features</h2>
+                    <p>Nobody does this stuff better than us. You can bet your life on that.</p>
+                </div>
+                <div>
+                    <img class="icon" src="assets/world.svg" alt="world icon">
+                    <h2>Reliable Service</h2>
+                    <p>You can count on us to help you whenever you need it. We're talking round the clock service.</p>
+                </div>
+                <div>
+                    <img class="icon" src="assets/swim.svg" alt="swimmer icon">
+                    <h2>An Acquired Taste</h2>
+                    <p>It may take a little while for you to warm up to us but once you do you will never want to switch </p>
+                </div>
+                <div>
+                    <img class="icon" src="assets/columns.svg" alt="temple icon">
+                    <h2>No Limits</h2>
+                    <p>There are absolutely no limits. We do not throttle. We do not cap.</p>
+                </div>
+     
+        </section>
+        <footer>
+            <p>(c) 2016 Some Organisation</p>
+        </footer>
     </body>
 </html>
