--- a/Week1/Webpage Project/index.html
+++ b/Week1/Webpage Project/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Webpage Project #1</title>
         <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
@@ -14,32 +16,50 @@
             />
         </header>
         <section id="splash">
-                <h1>Welcome to SPICED and the Future.</h3>
-                <button id="getStartedButton" type="button">Get Started</button>
+            <h1>Welcome to SPICED and the Future.</h1>
+            <button id="getStartedButton" type="button">Get Started</button>
         </section>
         <section id="promises">
-
+            <div>
+                <img class="icon" src="assets/cat.svg" alt="cat icon" />
                 <div>
-                    <img class="icon" src="assets/cat.svg" alt="cat icon">
                     <h2>Best-in-class Features</h2>
-                    <p>Nobody does this stuff better than us. You can bet your life on that.</p>
+                    <p>
+                        Nobody does this stuff better than us. You can bet your
+                        life on that.
+                    </p>
                 </div>
+            </div>
+            <div>
+                <img class="icon" src="assets/world.svg" alt="world icon" />
                 <div>
-                    <img class="icon" src="assets/world.svg" alt="world icon">
                     <h2>Reliable Service</h2>
-                    <p>You can count on us to help you whenever you need it. We're talking round the clock service.</p>
+                    <p>
+                        You can count on us to help you whenever you need it.
+                        We're talking round the clock service.
+                    </p>
                 </div>
+            </div>
+            <div>
+                <img class="icon" src="assets/swim.svg" alt="swimmer icon" />
                 <div>
-                    <img class="icon" src="assets/swim.svg" alt="swimmer icon">
                     <h2>An Acquired Taste</h2>
-                    <p>It may take a little while for you to warm up to us but once you do you will never want to switch </p>
+                    <p>
+                        It may take a little while for you to warm up to us but
+                        once you do you will never want to switch
+                    </p>
                 </div>
+            </div>
+            <div>
+                <img class="icon" src="assets/columns.svg" alt="temple icon" />
                 <div>
-                    <img class="icon" src="assets/columns.svg" alt="temple icon">
                     <h2>No Limits</h2>
-                    <p>There are absolutely no limits. We do not throttle. We do not cap.</p>
+                    <p>
+                        There are absolutely no limits. We do not throttle. We
+                        do not cap.
+                    </p>
                 </div>
-     
+            </div>
         </section>
         <footer>
             <p>(c) 2016 Some Organisation</p>
