--- a/Week2/exercises/ticker.html
+++ b/Week2/exercises/ticker.html
@@ -5,7 +5,33 @@
     </head>
     <body>
         <section id="ticker">
-            <div id="headlines"></div>
+            <div id="headlines">
+                <a
+                    href="https://gimletmedia.com/shows/science-vs/xjhd3od/platypuses-get-a-glow-up"
+                    >Platypuses Get a Glow Up</a
+                >
+                <a
+                    href="https://gimletmedia.com/shows/every-little-thing/dvhb3dg/a-nasalgazing-mystery-solved"
+                    >A Nasal-Gazing Mystery Solved</a
+                >
+                <a
+                    href="https://www.ttbook.org/interview/treating-anxiety-horror-filmsTreating"
+                    >Anxiety With Horror Films</a
+                >
+                <a
+                    href="https://www.ttbook.org/interview/fantastic-fungi-and-how-film-them"
+                    >'Fantastic Fungi' And How To Film Them</a
+                >
+                <a href="https://www.ttbook.org/interview/weird-world-eels"
+                    >The Weird World Of Eels</a
+                >
+                <a href="https://www.ttbook.org/interview/my-friend-samantha-ai"
+                    >My Friend Samantha (The A.I.)</a
+                >
+                <a href="https://www.alieward.com/ologies/medusology"
+                    >Medusology (JELLYFISH) with Dr. Rebecca Helm</a
+                >
+            </div>
         </section>
         <script src="ticker.js"></script>
     </body>
