DOM events exercise 2 - swap input for predefined text

--- a/Week2/exercises/DOM_Events_index.html
+++ b/Week2/exercises/DOM_Events_index.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="DOM_Events_style.css" />
     </head>
     <body>
-        <div id="box"></div>
+        <section id="exercise 1">
+            <div id="box"></div>
+        </section>
+        <section id="exercise 2">
+            <textarea name="" id="speech" cols="100" rows="20"></textarea>
+        </section>
 
         <script src="DOM_Events_exercises.js"></script>
     </body>
