DOM events exercise 3 - randomise background colour

--- a/Week2/exercises/DOM_Events_index.html
+++ b/Week2/exercises/DOM_Events_index.html
@@ -4,11 +4,17 @@
         <link rel="stylesheet" href="DOM_Events_style.css" />
     </head>
     <body>
-        <section id="exercise 1">
+        <p>exercise1</p>
+        <section id="exercise1">
             <div id="box"></div>
         </section>
-        <section id="exercise 2">
+        <p>exercise 2</p>
+        <section id="exercise2">
             <textarea name="" id="speech" cols="100" rows="20"></textarea>
+        </section>
+        <p>exercise 3</p>
+        <section id="exercise3">
+            <div id="blackBox"></div>
         </section>
 
         <script src="DOM_Events_exercises.js"></script>
