DOM events exercise 4 - randomise colour, stop propagation

--- a/Week2/exercises/DOM_Events_index.html
+++ b/Week2/exercises/DOM_Events_index.html
@@ -16,6 +16,11 @@
         <section id="exercise3">
             <div id="blackBox"></div>
         </section>
+        <section id="exercise4">
+            <div id="outerBox">
+                <div id="innerBox"></div>
+            </div>
+        </section>
 
         <script src="DOM_Events_exercises.js"></script>
     </body>
