small fix: add paragraph

--- a/Week2/exercises/DOM_Events_index.html
+++ b/Week2/exercises/DOM_Events_index.html
@@ -16,6 +16,7 @@
         <section id="exercise3">
             <div id="blackBox"></div>
         </section>
+        <p>exercise 4</p>
         <section id="exercise4">
             <div id="outerBox">
                 <div id="innerBox"></div>
