kitty carousel - part 1 Dots

--- a/projects/kitty carousel/index.html
+++ b/projects/kitty carousel/index.html
@@ -9,11 +9,19 @@
     </head>
     <body>
         <main>
-            <div id="carousel1">
-                <div id="kitty1" class="slides onscreen"></div>
-                <div id="kitty2" class="slides"></div>
-                <div id="kitty3" class="slides"></div>
-                <div id="kitty4" class="slides"></div>
+            <div class="carousel" id="carousel1">
+                <div class="slides">
+                    <div id="kitty1" class="slide onscreen"></div>
+                    <div id="kitty2" class="slide"></div>
+                    <div id="kitty3" class="slide"></div>
+                    <div id="kitty4" class="slide"></div>
+                </div>
+                <div class="dots">
+                    <div class="dot current"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
             </div>
         </main>
         <script src="kitty.js"></script>
