kitty carousel - part 1 dots clickable

--- a/projects/kitty carousel/index.html
+++ b/projects/kitty carousel/index.html
@@ -17,10 +17,10 @@
                     <div id="kitty4" class="slide"></div>
                 </div>
                 <div class="dots">
-                    <div class="dot current"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
+                    <div id="dot1" class="dot current"></div>
+                    <div id="dot2" class="dot"></div>
+                    <div id="dot3" class="dot"></div>
+                    <div id="dot4" class="dot"></div>
                 </div>
             </div>
         </main>
