renamed/changed folder structure

--- a/notes & experiments/index.html
+++ b/notes & experiments/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>DOM Experiments</title>
-        <link type="text/css" rel="stylesheet" href="style.css" />
+        <title>Canvas Experiments</title>
+        <link type="text/css" rel="stylesheet" href="canvas_experiments.css" />
     </head>
     <body>
         <section id="slugs">
