add Jquery exercise 2 - modal popup

--- a/projects/1st Webpage/index.html
+++ b/projects/1st Webpage/index.html
@@ -7,6 +7,15 @@
         <link type="text/css" rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="modal backdrop hidden">
+            <div class="popup">
+                <div class="cancelButton">
+                    <img src="assets/x.jpeg" alt="" />
+                </div>
+                <h3>This is a modal/popup!</h3>
+                <p>You can't use this website until you click the x!</p>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#">Settings</a></li>
@@ -76,6 +85,7 @@
         <footer>
             <p>(c) 2016 Some Organisation</p>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="welcome_spiced.js"></script>
     </body>
 </html>
