--- a/projects/Incremental Search/incremental.html
+++ b/projects/Incremental Search/incremental.html
@@ -12,7 +12,7 @@
             <h1>Incremental Search</h1>
             <div id="incrementalSearch">
                 <input type="text" name="" class="textInput" />
-                <div class="results"></div>
+                <div class="hidden results"></div>
             </div>
         </main>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
