small fix css style

--- a/projects/Incremental Search/incremental.html
+++ b/projects/Incremental Search/incremental.html
@@ -10,9 +10,10 @@
     <body>
         <main>
             <h1>Incremental Search</h1>
+            <p>You can use UP, DOWN and ENTER to navigate the suggestions.</p>
             <div id="incrementalSearch">
                 <input type="text" name="" class="textInput" />
-                <div class="hidden results"></div>
+                <div class="hidden suggestions"></div>
             </div>
         </main>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
