add Connect 4 - place coins, switch players

--- a/projects/Connect Four/connect4.html
+++ b/projects/Connect Four/connect4.html
@@ -70,8 +70,8 @@
             </div>
         </main>
         <footer>
-            <div class="player yin blue"></div>
-            <div class="player yang red yourTurn"></div>
+            <div class="marker player yin yourTurn"></div>
+            <div class="marker player yang"></div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="connect4.js"></script>
