--- a/projects/Connect Four/connect4.html
+++ b/projects/Connect Four/connect4.html
@@ -8,7 +8,9 @@
         <title>Connect Four</title>
     </head>
     <body>
-        <header><h1>Connect 4</h1></header>
+        <header>
+            <h1>Connect 4</h1>
+        </header>
         <main>
             <div class="board">
                 <div class="column">
@@ -68,10 +70,23 @@
                     <div class="slot"></div>
                 </div>
             </div>
+            <section class="message">
+                <div>WON!</div>
+                <button class="resetButton">Play again?</button>
+            </section>
         </main>
         <footer>
-            <div class="marker player yin yourTurn">Yin</div>
-            <div class="marker player yang">Yang</div>
+            <div class="player yin">
+                <div class="marker yinCoin"></div>
+
+                <div class="name">Yin</div>
+                <div class="wins"></div>
+            </div>
+            <div class="player yang">
+                <div class="marker yangCoin"></div>
+                <div class="name">Yang</div>
+                <div class="wins"></div>
+            </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="connect4.js"></script>
