add personalised names

--- a/projects/Connect Four/connect4.html
+++ b/projects/Connect Four/connect4.html
@@ -79,12 +79,28 @@
             <div class="player yin">
                 <div class="marker yinCoin"></div>
 
-                <div class="name">Yin</div>
+                <!-- <div > -->
+                <input
+                    type="text"
+                    class="Tname"
+                    value="Yin"
+                    placeholder="Yin"
+                    size="12"
+                />
+                <!-- Yang</div> -->
                 <div class="wins"></div>
             </div>
             <div class="player yang">
                 <div class="marker yangCoin"></div>
-                <div class="name">Yang</div>
+                <!-- <div > -->
+                <input
+                    type="text"
+                    class="Tname"
+                    value="Yang"
+                    placeholder="Yang"
+                    size="12"
+                />
+                <!-- Yang</div> -->
                 <div class="wins"></div>
             </div>
         </footer>
