--- a/projects/Incremental Search/incremental.html
+++ b/projects/Incremental Search/incremental.html
@@ -17,6 +17,8 @@
             </div>
         </main>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
         <script src="incremental.js"></script>
+        <script src="ajax.js"></script>
     </body>
 </html>
