--- a/projects/Spotify Search/index.html
+++ b/projects/Spotify Search/index.html
@@ -29,9 +29,7 @@
         </header>
         <main>
             <h1 id="searchResultsheadline">hello</h1>
-            <ol id="searchResults">
-                <li>list Item</li>
-            </ol>
+            <ol id="searchResults"></ol>
             <button id="moreButton" type="submit">Show me more</button>
         </main>
         <script
