--- a/projects/Spotify Search/index.html
+++ b/projects/Spotify Search/index.html
@@ -28,8 +28,8 @@
             </div>
         </header>
         <main>
-            <h1 id="searchResultsheadline">hello</h1>
-            <ol id="searchResults"></ol>
+            <h2 id="searchResultsheadline"></h2>
+            <ul id="searchResults"></ul>
             <button id="moreButton" type="submit">Show me more</button>
         </main>
         <script
