fix moreButton & appending of next results

--- a/projects/Spotify Search/index.html
+++ b/projects/Spotify Search/index.html
@@ -30,7 +30,9 @@
         <main>
             <h2 id="searchResultsheadline"></h2>
             <ul id="searchResults"></ul>
-            <button id="moreButton" type="submit">Show me more</button>
+            <button id="moreButton" class="hidden" type="submit">
+                Show me more
+            </button>
         </main>
         <script
             type="text/javascript"
