--- a/projects/Spotify Search/index.html
+++ b/projects/Spotify Search/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
         <link rel="stylesheet" href="style.css" />
         <title>Spotify Search</title>
     </head>
@@ -34,10 +35,20 @@
                 Show me more
             </button>
         </main>
+
+        <!--THIS IS THE TEMPLATE-->
+        <script id="music" type="text/x-handlebars-template">
+            {{#each results}}
+                <li>
+                    <img src="{{images.0.url}}" alt="picture" />
+                    <a href="{{external_urls.spotify}}">{{name}}</a>
+                </li>
+            {{/each}}
+        </script>
         <script
             type="text/javascript"
             src="https://code.jquery.com/jquery-3.5.1.min.js"
         ></script>
-        <script src="spotify.js"></script>
+        <script src="spotify.js" type="text/javascript"></script>
     </body>
 </html>
