add notes/experiment for handlebars

--- a/notes & experiments/handlebars_experiment.html
+++ b/notes & experiments/handlebars_experiment.html
@@ -24,7 +24,7 @@
         </script>
 
         <script type="text/javascript">
-            //get the html from the template & compile
+            //get the template & compile
             var dogHTML = document.getElementById("dogs").innerHTML;
             var dogTemplate = Handlebars.compile(dogHTML);
 
