several small updates

--- a/projects/Connect Four/connect4.html
+++ b/projects/Connect Four/connect4.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="" type="text/css" />
         <link rel="stylesheet" href="connect4_style.css" />
+
         <title>Connect Four</title>
     </head>
     <body>
@@ -103,8 +105,15 @@
                 <!-- Yang</div> -->
                 <div class="wins"></div>
             </div>
+            <!-- <form action="" style="width: 500px">
+                <div id="picker" style="float: right"></div>
+            </form> -->
         </footer>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="connect4.js"></script>
+        <script
+            type="text/javascript"
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+        ></script>
+        <script type="text/javascript" src="farbtastic.js"></script>
+        <script type="text/javascript" src="connect4.js"></script>
     </body>
 </html>
